WIP2
필드 comment는 안나오는중

Signed-off-by: Seonghyeon Cho <seonghyeoncho96@gmail.com>