@@ -7,9 +7,11 @@ plugins {
     id 'signing'
 
     id("com.github.gradlecommunity.jaxb2") version "3.1.0"
+//    id("org.unbroken-dome.xjc") version "2.0.0"
+    id("com.github.bjornvester.xjc") version "1.8.2"
 
-    id "com.github.spotbugs" version "latest.release"
-    id "com.diffplug.spotless" version "latest.release"
+//    id "com.github.spotbugs" version "latest.release"
+//    id "com.diffplug.spotless" version "latest.release"
     id 'pmd'
     id 'checkstyle'
 
@@ -19,6 +21,18 @@ plugins {
 
     id "se.bjurr.gitchangelog.git-changelog-gradle-plugin" version "latest.release"
     id 'org.hidetake.ssh' version "latest.release"
+}
+
+compileJava {
+//    options.compilerArgs += ["--add-modules", "jakarta.xml.bind"]
+//                             [
+//                                     "java.xml.bind",
+//                             ].join(",")
+}
+
+    // --add-modules java.xml.bind 추가
+tasks.withType(JavaCompile).configureEach {
+//    options.compilerArgs += ["--add-modules", "jakarta.xml.bind"]
 }
 
 configurations {
@@ -54,25 +68,26 @@ repositories {
 
 dependencies {
     api 'commons-cli:commons-cli:+'
-    api 'javax.xml.bind:jaxb-api:2.+'
+    api 'jakarta.xml.bind:jakarta.xml.bind-api:4.0.2'
 
     // We need to export this as API explicitly and fix the Versions
     // or else the Doclet will silently(!) not generate the output
-    api 'org.glassfish.jaxb:jaxb-runtime:2.3.2'
-    api 'javax.activation:javax.activation-api:1.2.0'
+//    api 'org.glassfish.jaxb:jaxb-runtime:4.0.2'
+    runtimeOnly 'org.glassfish.jaxb:jaxb-runtime:4.0.2'
+    api 'jakarta.activation:jakarta.activation-api:2.1.3'
 
-    jaxb2 'org.glassfish.jaxb:jaxb-runtime:2.3.2'
-    jaxb2 'javax.activation:javax.activation-api:1.2.0'
+    jaxb2 'org.glassfish.jaxb:jaxb-runtime:4.0.2'
+    jaxb2 'jakarta.activation:jakarta.activation-api:2.1.3'
     testImplementation 'org.slf4j:slf4j-simple:+'
     testImplementation 'junit:junit:+'
 
     // https://mvnrepository.com/artifact/net.sf.saxon/Saxon-HE
-    api 'net.sf.saxon:Saxon-HE:12.2'
+    api 'net.sf.saxon:Saxon-HE:12.5'
 
     // Java Doc in XML Format
-    xmlDoclet 'javax.xml.bind:jaxb-api:2.+'
-    xmlDoclet 'org.glassfish.jaxb:jaxb-runtime:2.3.2'
-    xmlDoclet 'javax.activation:javax.activation-api:1.2.0'
+    xmlDoclet 'jakarta.xml.bind:jakarta.xml.bind-api:4.0.2'
+    xmlDoclet 'org.glassfish.jaxb:jaxb-runtime:4.0.2'
+    xmlDoclet 'jakarta.activation:jakarta.activation-api:2.1.3'
     xmlDoclet 'com.manticore-projects.tools:xml-doclet:+'
 }
 
@@ -198,8 +213,8 @@ java {
     withSourcesJar()
     withJavadocJar()
 
-    sourceCompatibility(JavaVersion.VERSION_1_8)
-    targetCompatibility(JavaVersion.VERSION_1_8)
+    sourceCompatibility(JavaVersion.VERSION_17)
+    targetCompatibility(JavaVersion.VERSION_17)
 
     toolchain {
         languageVersion.set(JavaLanguageVersion.of(21))
@@ -216,22 +231,29 @@ shadowJar {
     minimize()
 }
 
-jaxb2 {
-    xjc {
-      'xmldoclet-classes' {
-        basePackage = 'com.github.markusbernhardt.xmldoclet.xjc'
-        schema = 'src/main/xjc/javadoc.xsd'
-        encoding = 'UTF-8'
-        generatedSourcesDir = "${project.buildDir}/generated/sources/java/main/xjc"
-        additionalArgs = '-extension'
-      }
-    }
+//jaxb2 {
+//    xjc {
+//        'xmldoclet-classes' {
+//            basePackage = 'com.github.markusbernhardt.xmldoclet.xjc'
+//            schema = 'src/main/xjc/javadoc.xsd'
+//            encoding = 'UTF-8'
+//            generatedSourcesDir = "${project.buildDir}/generated/sources/java/main/xjc"
+//            additionalArgs = '-extension'
+//        }
+//    }
+//}
+
+xjc {
+    xjcVersion = "3.0.2"
+    xsdDir.set(layout.projectDirectory.dir("src/main/xjc"))
+    markGenerated.set(true)
+    defaultPackage.set("com.github.markusbernhardt.xmldoclet.xjc")
 }
 
 sourceSets {
     main {
         java {
-            srcDir "${project.buildDir}/generated/sources/java/main"
+            srcDir "${project.layout.buildDir}/generated/sources/java/main"
         }
     }
 }
@@ -273,23 +295,23 @@ tasks.withType(Javadoc).configureEach {
 }
 
 
-spotbugsMain {
-    reports {
-        html {
-            enabled = true
-            destination = file("build/reports/spotbugs/main/spotbugs.html")
-            stylesheet = 'fancy-hist.xsl'
-        }
-    }
-}
-
-spotbugs {
-    // fail only on P1 and without the net.sf.jsqlparser.parser.*
-    excludeFilter = file("config/spotbugs/spotBugsExcludeFilter.xml")
-
-    // do not run over the test, although we should do that eventually
-    spotbugsTest.enabled = false
-}
+//spotbugsMain {
+//    reports {
+//        html {
+//            enabled = true
+//            destination = file("build/reports/spotbugs/main/spotbugs.html")
+//            stylesheet = 'fancy-hist.xsl'
+//        }
+//    }
+//}
+//
+//spotbugs {
+//    // fail only on P1 and without the net.sf.jsqlparser.parser.*
+//    excludeFilter = file("config/spotbugs/spotBugsExcludeFilter.xml")
+//
+//    // do not run over the test, although we should do that eventually
+//    spotbugsTest.enabled = false
+//}
 
 pmd {
     consoleOutput = false
@@ -321,23 +343,23 @@ checkstyle {
     configFile =rootProject.file('config/checkstyle/checkstyle.xml')
 }
 
-spotless {
-    // optional: limit format enforcement to just the files changed by this feature branch
-    ratchetFrom 'origin/master'
-
-    format 'misc', {
-        // define the files to apply `misc` to
-        target '*.rst', '*.md', '.gitignore'
-        // define the steps to apply to those files
-        trimTrailingWhitespace()
-        indentWithSpaces(4) // or spaces. Takes an integer argument if you don't like 4
-        endWithNewline()
-    }
-    java {
-        indentWithSpaces(4)
-        eclipse().configFile('config/formatter/eclipse-java-google-style.xml')
-    }
-}
+//spotless {
+//    // optional: limit format enforcement to just the files changed by this feature branch
+//    ratchetFrom 'origin/master'
+//
+//    format 'misc', {
+//        // define the files to apply `misc` to
+//        target '*.rst', '*.md', '.gitignore'
+//        // define the steps to apply to those files
+//        trimTrailingWhitespace()
+//        indentWithSpaces(4) // or spaces. Takes an integer argument if you don't like 4
+//        endWithNewline()
+//    }
+//    java {
+//        indentWithSpaces(4)
+//        eclipse().configFile('config/formatter/eclipse-java-google-style.xml')
+//    }
+//}
 
 tasks.withType(Checkstyle).configureEach {
     reports {
